--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +21,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YalaTour"
         tools:targetApi="31">
+        <activity
+            android:name=".Activities.PlaceinTrip"
+            android:exported="false" />
+        <activity
+            android:name=".DetailsActivity.TripDetails"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.SelectingPlacesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.TripActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.FullScreenImageActivity"
             android:exported="false" />
@@ -64,6 +78,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".Classes.MessageService"
+            android:exported="false"
+            android:permission="TODO">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="YalaTour.5" />
     </application>
 
 </manifest>
