--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
             android:name=".Activities.CityActivity"
             android:exported="false" />
         <activity
+            android:name=".Activities.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".UploadActivities.UploadActivity"
             android:exported="false" />
         <activity
@@ -81,6 +84,7 @@
         <activity
             android:name=".Activities.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
