--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         android:theme="@style/Theme.YalaTour"
         tools:targetApi="31">
         <activity
+            android:name=".UploadActivities.UploadMemoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditActivities.EditCityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.ForgetPasswordPage"
+            android:exported="false" />
+        <activity
             android:name=".EditActivities.EditMemoryActivity"
             android:exported="false" />
         <activity
@@ -39,7 +48,6 @@
         <activity
             android:name=".Activities.TripActivity"
             android:exported="false" />
-
         <activity
             android:name=".EditActivities.EditPlaceActivity"
             android:exported="false" />
@@ -56,7 +64,6 @@
         <activity
             android:name=".DetailsActivity.PlacesDetails"
             android:exported="false" />
-
         <activity
             android:name=".Activities.TourismPlaces"
             android:exported="false" />
